Pluralize resource endpoints and remove unused ones + restoreFocus + minor fixes
